make images not 404 on GH pages

--- a/deck.mdx
+++ b/deck.mdx
@@ -31,12 +31,12 @@ export { default as theme } from "./theme";
     color: 'white',
     backgroundColor: 'black',
   }}>
-<img src="/caldera-globe-md.png" />
+<img src="https://shelob9.github.io/testing-javascript-in-and-around-wordpress/caldera-globe-md.png" />
 
 <h1> JavaScript Testing In And Around WordPress</h1>
 <h2>Josh Pollock </h2>
 
-<img src="/caldera-globe-md.png" />
+<img src="https://shelob9.github.io/testing-javascript-in-and-around-wordpress/caldera-globe-md.png" />
 </Image>
 
 ---
@@ -45,7 +45,7 @@ export { default as theme } from "./theme";
 
 ## JavaScript & PHP Developer: CalderaWP
 
-![](/caldera-globe-25.png)
+![](https://shelob9.github.io/testing-javascript-in-and-around-wordpress/caldera-globe-25.png)
 
 - [JoshPress.net](https://joshpress.net)
 - [CalderaForms.com](https://CalderaForms.com)
