--- a/deck.mdx
+++ b/deck.mdx
@@ -30,13 +30,19 @@ export { default as theme } from "./theme";
     justifyContent: 'center',
     color: 'white',
     backgroundColor: 'black',
-  }}>
-<img src="https://shelob9.github.io/testing-javascript-in-and-around-wordpress/caldera-globe-md.png" />
+  }}
+  alt="Background image of a mountain with a lake."
+  >
+<img 
+  alt="CalderaWP Globe Logo"
+  src="https://shelob9.github.io/testing-javascript-in-and-around-wordpress/caldera-globe-md.png" />
 
 <h1> JavaScript Testing In And Around WordPress</h1>
 <h2>Josh Pollock </h2>
 
-<img src="https://shelob9.github.io/testing-javascript-in-and-around-wordpress/caldera-globe-md.png" />
+<img 
+  alt="CalderaWP Globe Logo"
+  src="https://shelob9.github.io/testing-javascript-in-and-around-wordpress/caldera-globe-md.png" />
 </Image>
 
 ---
@@ -45,7 +51,7 @@ export { default as theme } from "./theme";
 
 ## JavaScript & PHP Developer: CalderaWP
 
-![](https://shelob9.github.io/testing-javascript-in-and-around-wordpress/caldera-globe-25.png)
+![CalderaWP Globe Logo](https://shelob9.github.io/testing-javascript-in-and-around-wordpress/caldera-globe-25.png)
 
 - [JoshPress.net](https://joshpress.net)
 - [CalderaForms.com](https://CalderaForms.com)
