make slide link more obvious

--- a/deck.mdx
+++ b/deck.mdx
@@ -61,7 +61,7 @@ export { default as theme } from "./theme";
 
 # Slides/ Code
 
-## Slides
+## 👀 JSWP-Testing.Caldera.dev 👀
 
 - [View Slides](https://shelob9.github.io/testing-javascript-in-and-around-wordpress/)
 - [Download Slides As PDF](https://shelob9.github.io/testing-javascript-in-and-around-wordpress/presentation.pdf)
