minor typo fix"

--- a/deck.mdx
+++ b/deck.mdx
@@ -157,7 +157,7 @@ A "renderer" converts that object to a useable interface.
 
 - Test Runner
   - Runs the tests
-  - Examples: Jest. phpunit
+  - Examples: Jest or phpunit
 - Test Renderers
   - Creates and inspects output
 - Assertions
@@ -224,7 +224,7 @@ it("renders without crashing", () => {
 # Questions To Ask?
 
 - How do I know the components works?
-  - Answer with tests
+  - Answer with unit tests
 - How do I know the components work together?
   - Answer with integration/ feature tests
 - What is the most realistic test of the program?
