--- a/deck.mdx
+++ b/deck.mdx
@@ -60,12 +60,12 @@ export { default as theme } from "./theme";
 ---
 
 # Slides/ Code
-
-## 👀 JSWP-Testing.Caldera.dev 👀
+👀 JSWP-Testing.Caldera.dev 👀
 
 - [View Slides](https://shelob9.github.io/testing-javascript-in-and-around-wordpress/)
 - [Download Slides As PDF](https://shelob9.github.io/testing-javascript-in-and-around-wordpress/presentation.pdf)
 - [Source Code For Slides](https://github.com/Shelob9/testing-javascript-in-and-around-wordpress)
+- [Related Blog Post](https://joshpress.net/testing-javascript-the-wordpress-way/)
 
 ## Example Code
 
