--- a/deck.mdx
+++ b/deck.mdx
@@ -49,7 +49,9 @@ export { default as theme } from "./theme";
 
 # 🌋Hi I'm Josh 🌋
 
-## JavaScript & PHP Developer: CalderaWP
+## JavaScript & PHP Engineer: CalderaWP
+
+Also, co-founder, etc.
 
 ![CalderaWP Globe Logo](https://shelob9.github.io/testing-javascript-in-and-around-wordpress/caldera-globe-25.png)
 
@@ -60,6 +62,7 @@ export { default as theme } from "./theme";
 ---
 
 # Slides/ Code
+
 👀 JSWP-Testing.Caldera.dev 👀
 
 - [View Slides](https://shelob9.github.io/testing-javascript-in-and-around-wordpress/)
@@ -742,7 +745,7 @@ describe("Save componet", () => {
 # End To End Testing Gutenberg Blocks
 
 - Assuming that all of the components work, does the program function as expected.
-- Test as a user.
+- **Test like the user**
 
 - [Introductory Post](https://make.wordpress.org/core/2019/06/27/introducing-the-wordpress-e2e-tests/)
 - [Documentation](https://developer.wordpress.org/block-editor/packages/packages-scripts/)
@@ -829,7 +832,7 @@ describe("Block", () => {
 
 e2e tests ensure that the system works toghether.
 
-They are a compliment to less expensive unit/ inegration tests.
+They are a compliment to less expensive unit/ integration tests.
 
 ---
 
@@ -841,7 +844,7 @@ They are a compliment to less expensive unit/ inegration tests.
   - Makes refactoring faster and safer.
 - For legacy projects, start with acceptance tests.
   - Covers more, makes refactoring for unit-testablity safer.
-- Do Not Forget To Test For Accesibility errors
+- Do not forget to test for accesibility errors
 
   - [Good Post On Reporting a11y Errors In Console](https://web.dev/accessibility-auditing-react)
 
