--- a/deck.mdx
+++ b/deck.mdx
@@ -63,6 +63,11 @@ Find a bug or typo? Pull requests are welcome.
 
 ---
 
+## Alternative Consumption Methods
+
+- [Consume this material as a gitbook](https://react-wordpress-testing.joshpress.net/)
+---
+
 # Does My Code Work?
 
 ## How would I know?
