--- a/deck.mdx
+++ b/deck.mdx
@@ -31,10 +31,10 @@ PHP & JavaScript Engineer/ Dog Enthusiast
  - Lead Web Engineer [10up](https://10up.com)
  - [JoshPress.net](https://joshpress.net)
  - [@josh412](https://twitter.com/josh412)
-
+ - [Josh412.eth](https://Josh412.eth)
 ---
 
-## Slides and Code
+# Slides and Code
 
 ### Slides
 
@@ -504,11 +504,18 @@ Create a one page app that:
 
 ---
 
+# Testing Gutenberg Blocks
+
+### It's React, Test It The Same Way
+
+---
+
 `yarn add @wordpress/scripts`
 
 # Let's Write Some Tests
 
 And A Plugin
+
 
 ---
 
@@ -516,27 +523,8 @@ And A Plugin
 
 A block for showing some text.
 
-- The components for the app should be reused.
-- The block preview and rendered content should be identical.
-- The control for the value should appear in the block’s inspector controls.
-
----
-
-# Test Spec
-
-## Integration Test
-
-Will Gutenberg be able to manage our component’s state?
-
----
-
-# Test Spec
-
-## e2e Test
-
-Does our plugin activate without errors?
-
-Does our block appear in the block chooser?
+- Block editor will display a value or when selected an inline editor
+- [Block Tutorial](https://developer.wordpress.org/block-editor/handbook/tutorials/create-block/)
 
 ---
 
@@ -572,9 +560,7 @@ See [README](https://www.npmjs.com/package/@wordpress/scripts)
   "scripts": {
     "build": "wp-scripts build",
     "start": "wp-scripts start",
-    "test:e2e": "wp-scripts test-e2e --config e2e/jest.config.js",
     "test:unit": "wp-scripts test-unit-js --config jest.config.js",
-    "env:start": "bash start.sh"
   }
 }
 ```
@@ -589,243 +575,152 @@ Testing works the same, we can use same renderers.
 
 ---
 
-# Structuring Blocks For Easy Testing
+# Structuring Blocks For Testing
 
-The file that builds the block to do nothing but build the block.
+One file that registers the block.
 
 ---
+# Structuring Blocks For Testing
 
 ## The Block
 
 ```jsx
 import { registerBlockType } from "@wordpress/blocks";
-import { Editor } from "./components/Editor";
-import { Save } from "./components/Save";
-const blockConfig = require("../block.json");
-const { name, title, attributes, category, keywords } = blockConfig;
+import Edit from './Edit';
+import Save from './Save';
 
-registerBlockType(name, {
-  title,
-  attributes,
-  category,
-  keywords,
-  edit: props => <Editor {...props} />,
-  save: props => <Save {...props} />
+const blockConfig = require('./block.json');
+registerBlockType(blockConfig.name, {
+    ...blockConfig,
+    edit: Edit,
+    save: Save
 });
 ```
 
 ---
+# Structuring Blocks For Testing
 
 ## Edit And Save Callbacks
 
-The edit and save callback are composed in separate files, importing components built for the app.
+The edit and save callback are composed in separate files.
 
-### Reponsiblity: Map Props
 
 ---
+# Structuring Blocks For Testing
 
 ## Edit Callback
 
 ```jsx
-import React, { Fragment } from "react";
-import { EditValue } from "./app/EditValue";
-import { DisplayValue } from "./app/DisplayValue";
-import { InspectorControls } from "@wordpress/block-editor";
-export const Editor = ({ attributes, setAttributes, className, clientId }) => {
-  //Change handler
-  const onChange = value => setAttributes({ value });
-  //current value
-  const { value } = attributes;
-  return (
-    <Fragment>
-      <InspectorControls>
-        <EditValue
-          className={`${className}-editor`}
-          id={clientId}
-          value={value}
-          onChange={onChange}
-        />
-      </InspectorControls>
-      <DisplayValue value={value} className={className} />
-    </Fragment>
-  );
-};
+import { TextControl } from '@wordpress/components';
+import { __ } from '@wordpress/i18n';
+import { useBlockProps } from '@wordpress/block-editor';
+
+export const Editor = ({ value, onChange, isSelected }) => (
+    <>
+        {isSelected ?
+            <TextControl
+                value={value}
+                onChange={onChange}
+            /> : <p>{value}</p>
+        }
+    </>
+);
+export default function Edit({ attributes, setAttributes, isSelected }) {
+    return (
+        <div {...useBlockProps()}>
+            <Editor isSelected={isSelected} value={attributes.content} onChange={(content) => setAttributes({ content })} />
+        </div>
+    );
+}
 ```
 
 ---
+# Structuring Blocks For Testing
 
-### Test Edit Callback
+
+## Test Edit Callback
 
 ```jsx
+
+//Import React
+import React from 'react';
+//Import test renderer
+import { render, fireEvent, cleanup } from '@testing-library/react';
+//Import component to test
+import { Editor } from './Edit';
+
+
 describe("Editor componet", () => {
-  afterEach(cleanup);
-  it("matches snapshot", () => {
-    const attributes = { value: "Hi Roy" };
-    const setAttributes = jest.fn();
-    expect(
-      render(
-        <Editor
-          {...{
-            attributes,
-            setAttributes,
-            clientId: "random-id",
-            className: "wp-blocks-whatever"
-          }}
-        />
-      )
-    ).toMatchSnapshot();
-  });
+    afterEach(cleanup);
+    it('matches snapshot when selected', () => {});
+
+    it('matches snapshot when not selected', () => {});
+
+    it("Calls the onchange function", () => {});
+
+    it("Passes updated value, not event to onChange callback", () => { });
 });
 ```
 
 ---
+# Testing Blocks
 
-### Save Callback
+### Snapshot Test Block Editor Component
 
 ```jsx
-import React from "react";
-import { DisplayValue } from "./app/DisplayValue";
-export const Save = ({ attributes, className }) => {
-  return <DisplayValue value={attributes.value} className={className} />;
-};
+it('matches snapshot when selected', () => {
+    const onChange = jest.fn();
+    const { container } = render(<Editor
+        onChange={onChange}
+        value={'Tacos'}
+        isSelected="true"
+    />);
+    expect(container).toMatchSnapshot();
+});
 ```
 
----
+--- 
+# Testing Blocks
 
-### Test Save Callback
+### Testing Events For Block Editor Component
 
 ```jsx
-describe("Save componet", () => {
-  afterEach(cleanup);
-  it("matches snapshot", () => {
-    const attributes = { value: "Hi Roy" };
-    expect(
-      render(
-        <Save
-          {...{
-            attributes,
-            clientId: "random-id",
-            className: "wp-blocks-whatever"
-          }}
-        />
-      )
-    ).toMatchSnapshot();
+it("Calls the onChange function", () => {
+  const onChange = jest.fn();
+  const { getByDisplayValue } = render(<Editor
+      onChange={onChange}
+      value={'Salad'}
+      isSelected="false"
+  />);
+  fireEvent.change(getByDisplayValue("Salad"), {
+      target: { value: "New Value" }
   });
+  expect(onChange).toHaveBeenCalledTimes(1);
+  expect(onChange).toHaveBeenCalledWith("Boring Water");
 });
 ```
 
 ---
+# Structuring Blocks For Testing
 
-# End To End Testing Gutenberg Blocks
-
-- Assuming that all of the components work, does the program function as expected.
-- **Test like the user**
-
-- [Introductory Post](https://make.wordpress.org/core/2019/06/27/introducing-the-wordpress-e2e-tests/)
-- [Documentation](https://developer.wordpress.org/block-editor/packages/packages-scripts/)
-
----
-
-## How To Setup Up WordPress End To End Tests
-
-To make things easier, add the WordPress e2e test utilities:
-
-```bash
-# Add e2e test utilities
-yarn add @wordpress/e2e-test-utils
-```
-
----
-
-## Configure Jest
-
-A seperate Jest config is needed to make sure it does NOT run unit tests.
-
-- [Jest Config For Unit Tests](https://github.com/Shelob9/testing-react-wordpress/blob/master/jest.config.js)
-- [Jest Config For e2e Tests](https://github.com/Shelob9/testing-react-wordpress/tree/master/e2e)
-
-```javascript
-const defaultConfig = require("./node_modules/@wordpress/scripts/config/jest-unit.config.js");
-module.exports = {
-  //use the default from WordPress for everything...
-  ...defaultConfig,
-  //Except test ignore, where we need to ignore our e2e test directory
-  testPathIgnorePatterns: ["/.git/", "/node_modules/", "<rootDir>/e2e"]
-};
-```
-
-This is based on [WordPress core's e2e tests](https://github.com/WordPress/wordpress-develop/tree/master/tests/e2e)
-
----
-
-## Uses Puppetter To Automate Chrome
-
-Easiest if you have WordPress running locally in Docker [like core does](https://github.com/WordPress/wordpress-develop/tree/master/tools/local-env)
-
-[Copy my copy of core's local development](https://github.com/Shelob9/testing-react-wordpress/tree/master#local-development)
-
----
-
-# Test That Block Works
-
----
-
-## Use Helpers
-
-Import helper functions from `@wordpress/e2e-test-utils`
-
-```js
-import {
-  insertBlock,
-  getEditedPostContent,
-  createNewPost,
-  activatePlugin
-} from "@wordpress/e2e-test-utils";
-```
-
----
-
-## Test Adding Block
+## Save Callback
 
 ```jsx
-describe("Block", () => {
-  beforeEach(async () => {
-    await activatePlugin("josh-jswp/josh-jswp.php");
-  });
-  it("Can add block", async () => {
-    await createNewPost();
-    await insertBlock("Josh Block");
-    expect(await getEditedPostContent()).toMatchSnapshot();
-  });
-});
+import { __ } from '@wordpress/i18n';
+import { useBlockProps } from '@wordpress/block-editor';
+
+export default function save({ attributes }) {
+  return <div {...useBlockProps.save()}>{attributes.content}</div>;
+}
 ```
 
 ---
+# Structuring Blocks For Testing
 
-# Do NOT e2e Test Everything
+## Test Save Callback
 
-e2e tests ensure that the system works toghether.
-
-They are a compliment to less expensive unit/ integration tests.
-
----
-
-# Recomendations
-
-- Assume your components will be reused.
-  - Test in isolation.
-- Start with unit tests on new projects.
-  - Makes refactoring faster and safer.
-- For legacy projects, start with acceptance tests.
-  - Covers more, makes refactoring for unit-testablity safer.
-- Do not forget to test for accesibility errors
-
-  - [Good Post On Reporting a11y Errors In Console](https://web.dev/accessibility-auditing-react)
-
-- Follow and learn from [Kent C. Dodds](https://kentcdodds.com/)
-  - Author of React Testing Library and many great posts and videos about React, React testing.
-
----
+- Don't test the framework.
+- Don't test what doesn't make sense to test.
 
 # 🤷 Any Questions? 🤷
 
@@ -834,6 +729,6 @@ They are a compliment to less expensive unit/ integration tests.
 
 ## 🙏 Thank You! 🙏
 
-- [JoshPress.net](https://joshpress.net)
-- [SaturdayDrive.io](https://SaturdayDrive.io)
-- [@josh412](https://twitter.com/josh412)
+ - [JoshPress.net](https://joshpress.net)
+ - [@josh412](https://twitter.com/josh412)
+ - [Josh412.eth](https://Josh412.eth)
